--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <script type="module" src="/main.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <title>Math Quiz Game</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <div id="app">
+      <h1 id="gameName">Math Game</h1>
+      <h2>
+        You have 30 seconds to answer as many arithmetic questions as possible
+      </h2>
+      <a href="gameScreen.html">
+        <button>Start Game</button>
+      </a>
+    </div>
   </body>
 </html>
