--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         You have 30 seconds to answer as many arithmetic questions as possible
       </h2>
       <a href="gameScreen.html">
-        <button>Start Game</button>
+        <button id="startButton">Start Game</button>
       </a>
     </div>
   </body>
