--- a/src/gameScreen.html
+++ b/src/gameScreen.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <script type="module" src="main.js"></script>
+    <title>game screen</title>
   </head>
   <body>
     <a href="index.html">Button back to main</a>
+    <div>
+      <h1>Math Game</h1>
+      <h2 id="gameTimer">30</h2>
+      <button id="startGameButton">Start Game</button>
+    </div>
   </body>
 </html>
