Revamp styling to landing page

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,13 @@
   <body>
     <div id="app">
       <h1 id="gameName">Math Game</h1>
-      <h2>
-        You have 30 seconds to answer as many arithmetic questions as possible
-      </h2>
+      <h3>
+        <div>
+          Instructions
+          <li>You will be asked arithmetic questions</li>
+          <li>You will have</li>
+        </div>
+      </h3>
       <a href="gameScreen.html">
         <button id="toGameScreen">Play</button>
       </a>
