Added header, footer, and main content

--- a/src/index.html
+++ b/src/index.html
@@ -9,18 +9,25 @@
     <title>Math Quiz Game</title>
   </head>
   <body>
-    <div id="app">
-      <h1 id="gameName">Math Game</h1>
-      <h3>
-        <div>
-          Instructions
-          <li>You will be asked arithmetic questions</li>
-          <li>You will have</li>
-        </div>
-      </h3>
-      <a href="gameScreen.html">
-        <button id="toGameScreen">Play</button>
-      </a>
-    </div>
+    <header>
+      <h1 class="gameName">Math Quiz</h1>
+    </header>
+    <main>
+      <div id="app">
+        <h3>
+          <div class="instructions">
+            Instructions
+            <li>You will be asked arithmetic questions</li>
+            <li>You will have</li>
+          </div>
+        </h3>
+        <a href="gameScreen.html">
+          <button id="toGameScreen">Play</button>
+        </a>
+      </div>
+    </main>
+    <footer>
+      <h1>still need to implement</h1>
+    </footer>
   </body>
 </html>
