--- a/src/gameScreen.html
+++ b/src/gameScreen.html
@@ -12,6 +12,10 @@
       <h1>Math Game</h1>
       <h2 id="gameTimer">30</h2>
       <button id="startGameButton">Start Game</button>
+      <div id="questionAndAnswer">
+        <h3 id="question">What is 2 + 2</h3>
+        <input type="text" id="userAnswer" />
+      </div>
     </div>
   </body>
 </html>
