Added the functionality to get user input and check if the answer is correct

--- a/src/gameScreen.html
+++ b/src/gameScreen.html
@@ -12,6 +12,7 @@
       <h1>Math Game</h1>
       <h2 id="gameTimer">30</h2>
       <button id="startGameButton">Start Game</button>
+      <h3 id="score">0</h3>
       <div id="questionAndAnswer">
         <h3 id="question">What is 2 + 2</h3>
         <input type="text" id="userAnswer" />
