Complete change to landing page

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,14 @@
         <h3>
           <div class="instructions">
             Instructions
-            <li>You will be asked arithmetic questions</li>
-            <li>You will have</li>
+            <ul>
+              <li>You will be asked arithmetic questions</li>
+              <li>
+                You will have 30 seconds to answer as many questions as possible
+              </li>
+              <li>To submit your answer press the enter key</li>
+              <li>For each correct answer you will get 1 point</li>
+            </ul>
           </div>
         </h3>
         <a href="gameScreen.html">
