--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,11 @@
         <h3>
           <div class="instructions">
             Instructions
-            <ul>
-              <li>You will be asked arithmetic questions</li>
-              <li>
-                You will have 30 seconds to answer as many questions as possible
-              </li>
-              <li>To submit your answer press the enter key</li>
-              <li>For each correct answer you will get 1 point</li>
-            </ul>
+            <p>
+              Welcome to my arithmetic game. You will have 30 seconds to answer
+              as many questions as possible. Enter your answer in the text box
+              then press enter. Good luck!
+            </p>
           </div>
         </h3>
         <a href="gameScreen.html">
@@ -31,8 +28,5 @@
         </a>
       </div>
     </main>
-    <footer>
-      <h1>still need to implement</h1>
-    </footer>
   </body>
 </html>
