Updated styling of game screen

--- a/src/gameScreen.html
+++ b/src/gameScreen.html
@@ -9,13 +9,16 @@
   </head>
   <body>
     <a href="index.html">Button back to main</a>
+    <h1 class="gameName">Math Game</h1>
     <div id="playScreen">
-      <h1 class="gameName">Math Game</h1>
-      <h2 id="gameTimer">30</h2>
       <button id="startGameButton">Start Game</button>
-      <h3 id="score">0</h3>
+    </div>
+    <div class="container">
       <div id="questionAndAnswer">
+        <h2 id="gameTimer">Timer: 30</h2>
+        <h3 id="score">Score: 0</h3>
         <h3 id="question">What is 2 + 2</h3>
+        <label for="userAnswer">Answer:</label>
         <input type="text" id="userAnswer" />
       </div>
     </div>
