Fixed issue where score and timer were not on the same row

--- a/src/gameScreen.html
+++ b/src/gameScreen.html
@@ -13,14 +13,14 @@
     <div id="playScreen">
       <button id="startGameButton">Start Game</button>
     </div>
-    <div class="container">
-      <div id="questionAndAnswer">
-        <h2 id="gameTimer">Timer: 30</h2>
-        <h3 id="score">Score: 0</h3>
-        <h3 id="question">What is 2 + 2</h3>
-        <label for="userAnswer">Answer:</label>
-        <input type="text" id="userAnswer" />
-      </div>
+    <div class="info">
+      <h3 id="gameTimer">Timer: 30</h3>
+      <h3 id="score">Score: 0</h3>
+    </div>
+    <div id="questionAndAnswer">
+      <h3 id="question">What is 2 + 2</h3>
+      <label for="userAnswer">Answer:</label>
+      <input type="text" id="userAnswer" />
     </div>
   </body>
 </html>
