--- a/src/results.html
+++ b/src/results.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Results Screen</title>
+    <script type="module" src="main.js"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <a href="index.html">to home</a>
+    <h1 class="gameName">Math Game</h1>
+    <div class="results">
+      <h2>Results:</h2>
+      <h3 id="score">Score: 0</h3>
+    </div>
   </body>
 </html>
